--- a/StockManagement/mainwindow.ui
+++ b/StockManagement/mainwindow.ui
@@ -32,7 +32,7 @@
      <string>Adicionar novo produto</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="listaProdutosTable">
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -41,37 +41,15 @@
       <height>191</height>
      </rect>
     </property>
-    <column>
-     <property name="text">
-      <string>Nome</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Qtd minima</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Quantidade</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Prioridade</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Tamanho</string>
-     </property>
-    </column>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>270</y>
+      <y>280</y>
       <width>141</width>
       <height>31</height>
      </rect>
@@ -89,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>250</y>
+      <y>270</y>
       <width>841</width>
       <height>20</height>
      </rect>
@@ -101,7 +79,7 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>240</x>
       <y>0</y>
       <width>20</width>
       <height>591</height>
@@ -129,12 +107,12 @@
      <string>Lista de produtos</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_5">
+   <widget class="QLineEdit" name="searchText">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>300</y>
-      <width>113</width>
+      <y>310</y>
+      <width>151</width>
       <height>20</height>
      </rect>
     </property>
@@ -146,7 +124,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>300</y>
+      <y>310</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -155,12 +133,12 @@
      <string>Nome</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="searchButton">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>330</y>
-      <width>75</width>
+      <x>14</x>
+      <y>340</y>
+      <width>231</width>
       <height>23</height>
      </rect>
     </property>
@@ -168,59 +146,43 @@
      <string>Buscar</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget_2">
+   <widget class="QTableWidget" name="searchTable">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>380</y>
-      <width>241</width>
+      <y>370</y>
+      <width>231</width>
       <height>181</height>
      </rect>
     </property>
     <column>
      <property name="text">
-      <string>Nome</string>
+      <string>Quantidade</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Quantidade</string>
+      <string>Preço</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Tamanho</string>
      </property>
     </column>
    </widget>
-   <widget class="QLineEdit" name="nome">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>430</y>
-      <width>154</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>241</width>
-      <height>201</height>
+      <width>231</width>
+      <height>221</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Nome</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="nomeAddText">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="prioridadeAddText"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_3">
@@ -229,10 +191,40 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="tamanhoAddText"/>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="qtdMinimaAddText"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Tamanho</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="qtdAddText">
        <property name="enabled">
         <bool>true</bool>
+       </property>
+       <property name="inputMethodHints">
+        <set>Qt::ImhPreferNumbers</set>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Qtd minima</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Nome</string>
        </property>
       </widget>
      </item>
@@ -243,30 +235,24 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="prioridadeAddText"/>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_4">
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="nomeAddText">
        <property name="text">
-        <string>Tamanho</string>
+        <string/>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="tamanhoAddText"/>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_9">
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_10">
        <property name="text">
-        <string>Qtd minima</string>
+        <string>Preço</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="qtdMinimaAddText"/>
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="precoAddText"/>
      </item>
-     <item row="5" column="0" colspan="2">
+     <item row="6" column="0" colspan="2">
       <widget class="QPushButton" name="addButton">
        <property name="text">
         <string>Adicionar</string>
@@ -274,29 +260,31 @@
       </widget>
      </item>
     </layout>
+    <zorder>label_2</zorder>
+    <zorder>nomeAddText</zorder>
+    <zorder>label_3</zorder>
+    <zorder>qtdAddText</zorder>
+    <zorder>label_5</zorder>
+    <zorder>prioridadeAddText</zorder>
+    <zorder>label_4</zorder>
+    <zorder>tamanhoAddText</zorder>
+    <zorder>label_9</zorder>
+    <zorder>qtdMinimaAddText</zorder>
+    <zorder>label_10</zorder>
+    <zorder>addButton</zorder>
+    <zorder>precoAddText</zorder>
    </widget>
-   <zorder>addButton</zorder>
-   <zorder>nomeAddText</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>addLabel</zorder>
-   <zorder>label_2</zorder>
-   <zorder>qtdAddText</zorder>
-   <zorder>label_3</zorder>
-   <zorder>prioridadeAddText</zorder>
-   <zorder>label_4</zorder>
-   <zorder>tamanhoAddText</zorder>
-   <zorder>label_5</zorder>
-   <zorder>tableWidget</zorder>
+   <zorder>listaProdutosTable</zorder>
    <zorder>label_6</zorder>
    <zorder>line</zorder>
    <zorder>label_7</zorder>
-   <zorder>lineEdit_5</zorder>
+   <zorder>searchText</zorder>
    <zorder>label_8</zorder>
-   <zorder>pushButton_2</zorder>
+   <zorder>searchButton</zorder>
    <zorder>line_2</zorder>
-   <zorder>tableWidget_2</zorder>
-   <zorder>label_9</zorder>
-   <zorder>qtdMinimaAddText</zorder>
-   <zorder>nome</zorder>
+   <zorder>searchTable</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
