--- a/StockManagement/mainwindow.ui
+++ b/StockManagement/mainwindow.ui
@@ -45,24 +45,6 @@
      <enum>Qt::LeftToRight</enum>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>300</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
@@ -82,7 +64,7 @@
       <x>240</x>
       <y>0</y>
       <width>20</width>
-      <height>591</height>
+      <height>291</height>
      </rect>
     </property>
     <property name="orientation">
@@ -151,7 +133,7 @@
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>231</width>
+      <width>211</width>
       <height>221</height>
      </rect>
     </property>
@@ -249,24 +231,6 @@
     <zorder>addButton</zorder>
     <zorder>precoAddText</zorder>
    </widget>
-   <widget class="QLabel" name="texto">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>320</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
@@ -301,15 +265,15 @@
    <widget class="QTableWidget" name="filaDeCompas">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>10</x>
       <y>340</y>
-      <width>311</width>
+      <width>331</width>
       <height>261</height>
      </rect>
     </property>
     <column>
      <property name="text">
-      <string>New Column</string>
+      <string>Nome</string>
      </property>
     </column>
     <column>
@@ -326,7 +290,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>20</x>
       <y>310</y>
       <width>81</width>
       <height>16</height>
@@ -339,45 +303,57 @@
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>360</y>
-      <width>47</width>
-      <height>13</height>
+      <x>140</x>
+      <y>310</y>
+      <width>271</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>(Exibe produtos que nao possuem estoque suficiente)</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>140</y>
+      <width>21</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>cm</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>410</y>
-      <width>47</width>
-      <height>13</height>
+      <x>230</x>
+      <y>200</y>
+      <width>21</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>R$</string>
     </property>
    </widget>
    <zorder>layoutWidget</zorder>
    <zorder>addLabel</zorder>
    <zorder>listaProdutosTable</zorder>
-   <zorder>label_6</zorder>
    <zorder>line</zorder>
    <zorder>label_7</zorder>
    <zorder>searchText</zorder>
    <zorder>label_8</zorder>
    <zorder>searchButton</zorder>
    <zorder>line_2</zorder>
-   <zorder>texto</zorder>
    <zorder>label_17</zorder>
    <zorder>deleteButton</zorder>
    <zorder>filaDeCompas</zorder>
    <zorder>label</zorder>
    <zorder>label_11</zorder>
+   <zorder>label_6</zorder>
    <zorder>label_12</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
